2007-08-24  Torsten Rahn  <rahn@kde.org>

	- add a MARBLE_DATA_INSTALL_PATH (this fixes the situation where packages get built in a directory which doesn't equal the final destination directory.
	- add icons for the Qt version of the application

	* CMakeLists.txt
	* data/CMakeLists.txt
	* data/icons/hi32-app-marble.png
	* data/icons/hi16-app-marble.png
	* data/icons/hi64-app-marble.png
	* data/icons/hi128-app-marble.png
	* data/icons/hi48-app-marble.png

2007-08-21  Torsten Rahn  <rahn@kde.org>

	* CMakeLists.txt:
	- Fixing the multilib issue for real.

2007-08-21  Torsten Rahn  <rahn@kde.org>

	- Applying Danimo's fixes to src/lib/HttpFetchFile.cpp
	and src/lib/gps/GpsFile.cpp for the Windows build.

	See SVN commit 703039 and 703003

2007-08-21  Torsten Rahn  <rahn@kde.org>

	- Correcting Tim Sutton's ifelse-typo.

2007-08-21  Torsten Rahn  <rahn@kde.org>

	Applied changes by Tim Sutton to make Marble
	work better on the Mac. Also applied changes 
	to correct the credits list.

	See SVN commits rev. 702537, 702676 and 702579 

2007-08-21  Torsten Rahn  <rahn@kde.org>

	Applied changes from Daniel Molkentin and
	Christian Ehrlicher to make Marble work on 
	Windows, see commits 702574 and 702899.

--- Marble 0.4.0 ---

2007-08-19  Torsten Rahn  <rahn@kde.org>

        * CMakeLists.txt: Install License.txt

2007-08-19  Inge Wallin  <inge@lysator.liu.se>

	Rename files according to the coding standards: PlaceMarkInfoDialog
	* src/lib/placemarkinfodialog.cpp: renamed into PlaceMarkInfoDialog.cpp
	* src/lib/placemarkinfodialog.h:   renamed into PlaceMarkInfoDialog.h
	* src/lib/placemarkinfodialog.ui:  renamed into PlaceMarkInfoDialog.ui
	* src/lib/CMakeLists.txt:  Reflect name changes
	* src/lib/MarbleWidgetpopupMenu.cpp: use new name
	
	Name changes according to the coding standards:
	 - PlaceMarkModel
	 - PlaceMarkPainter
	 - PlaceMarkManager
	* src/lib/placemarkmanager.cpp: renamed into PlaceMarkManager.cpp